deploy/deployment.yml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      workload.user.cattle.io/workloadselector: deployment-codelabs
    name: codelabs-wl
    namespace: codelabs-ns
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        workload.user.cattle.io/workloadselector: deployment-codelabs
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
      type: RollingUpdate
    template:
      metadata:
        labels:
          workload.user.cattle.io/workloadselector: deployment-codelabs
      spec:
        containers:
        - image: prod.harbor.drw/apprenticeship/codelabs:2022-11-23_13-37-57
          imagePullPolicy: Always
          name: codelabs-wl
          ports:
          - containerPort: 8000
            name: 8000tcp02
            protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 2000Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 65534
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: prod-harbor-drw-secret-from-apprenticeship
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
