deploy/service.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: codelabs-wl
    namespace: codelabs-ns
  spec:
    ports:
    - name: 8000tcp02
      port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      workload.user.cattle.io/workloadselector: deployment-codelabs
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
