deploy/ingress.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: codelabs-ingress
    namespace: codelabs-ns
  spec:
    ingressClassName: nginx
    rules:
    - host: codelabs.appr.drw
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: codelabs-wl
              port:
                number: 8000
    tls:
    - hosts:
      - codelabs.appr.drw
      secretName: appr-dot-drw-wildcard-cert
kind: List
metadata:
  resourceVersion: ""
